//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  firstName String [not null]
  lastName String [not null]
  middleName String
  email String [unique, not null]
  status String [not null, default: 'PENDING']
  avatarUrl String
  gender String
  phoneNumber String
  address String
  userRole String [not null, default: 'CUSTOMER']
  googleId String [unique]
  roles user_to_role [not null]
  permissions user_to_permission [not null]
  passwords passwords [not null]
  roleCreated roles [not null]
  roleUpdated roles [not null]
  featureCreated features [not null]
  featureUpdated features [not null]
  permissionCreated permissions [not null]
  permissionUpdated permissions [not null]
  requestCreator requests [not null]
  requestApprover requests [not null]
  carts carts [not null]
  orders orders [not null]
  StaffSchedule staff_schedules [not null]
  assignedAppointments appointments [not null]
  createdAppointments appointments [not null]
}

Table passwords {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  password String [not null]
  userId String [not null]
  type String [not null, default: 'PASSWORD']
  user users [not null]
}

Table roles {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [unique, not null]
  name String [not null]
  description String
  isReadOnly Boolean [not null, default: false]
  users user_to_role [not null]
  permissions role_to_permission [not null]
  createdBy users
  updatedBy users
}

Table user_to_role {
  userId String [not null]
  roleId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  user users [not null]
  role roles [not null]

  indexes {
    (userId, roleId) [pk]
  }
}

Table features {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [not null]
  name String [not null]
  description String
  type String [not null, default: 'FEATURE']
  parentId String
  sortOrder Int [not null, default: 0]
  parent features
  childs features [not null]
  permissions permissions [not null]
  createdBy users
  updatedBy users
}

Table permissions {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  createdById String
  updatedById String
  deleted Boolean [not null, default: false]
  code String [not null]
  name String [not null]
  description String
  type String [not null, default: 'FEATURE']
  featureId String [not null]
  feature features [not null]
  users user_to_permission [not null]
  roles role_to_permission [not null]
  createdBy users
  updatedBy users
}

Table user_to_permission {
  userId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  user users [not null]
  permission permissions [not null]

  indexes {
    (userId, permissionId) [pk]
  }
}

Table role_to_permission {
  roleId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  role roles [not null]
  permission permissions [not null]

  indexes {
    (roleId, permissionId) [pk]
  }
}

Table requests {
  id String [pk]
  createdById String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  requestType String [not null]
  jsonParameters String [not null]
  status String [not null, default: 'PENDING']
  approvedBy String
  approvedAt DateTime
  requester users [not null]
  approver users
}

Table customers {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  firstName String [not null]
  lastName String [not null]
  middleName String
  email String [unique]
  status String [not null, default: 'ACTIVE']
  avatarUrl String
  gender String
  phoneNumber String
  address String
  birthday DateTime
}

Table categories {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  slug String [unique, not null]
  products products [not null]
  Service services [not null]
}

Table products {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  slug String [unique, not null]
  description String
  content String
  price Float [not null]
  stock Int [not null, default: 0]
  sku String [unique, not null]
  categoryId String [not null]
  status String [not null, default: 'ACTIVE']
  imgUrl String
  category categories [not null]
  cartItems cart_items [not null]
  orderItems order_items [not null]
}

Table carts {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userId String [not null]
  user users [not null]
  items cart_items [not null]
}

Table cart_items {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  cartId String [not null]
  productId String [not null]
  quantity Int [not null]
  cart carts [not null]
  product products [not null]
}

Table orders {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userId String [not null]
  totalAmount Float [not null]
  status String [not null, default: 'PENDING']
  depositAmount Float
  couponId String
  discountAmount Float
  deliveryAddress String
  deliveryPhone String
  deliveryNote String
  user users [not null]
  coupon coupons
  items order_items [not null]
  payments payments [not null]
  qrCodes qr_codes [not null]
}

Table order_items {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orderId String [not null]
  productId String [not null]
  quantity Int [not null]
  price Float [not null]
  order orders [not null]
  product products [not null]
}

Table payments {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orderId String [not null]
  amount Float [not null]
  method String [not null]
  type String [not null]
  status String [not null, default: 'PENDING']
  txnRef String
  order orders [not null]
}

Table qr_codes {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  orderId String [not null]
  code String [not null]
  expiredAt DateTime
  order orders [not null]
}

Table News {
  id String [pk]
  title String [not null]
  slug String [unique, not null]
  thumbnail String [not null]
  summary String
  content String [not null]
  comments Comment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Comment {
  id String [pk]
  content String [not null]
  userName String [not null]
  userEmail String
  newsId String [not null]
  news News [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table staff_schedules {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`]
  deleted Boolean [not null, default: false]
  staffId String [not null]
  workDate DateTime [not null]
  startTime String [not null]
  endTime String [not null]
  shiftType String
  status String [not null, default: 'ACTIVE']
  note String
  staff users [not null]
  Service services
  serviceId String
  Appointment appointments [not null]
}

Table services {
  id String [pk]
  name String [not null]
  description String
  price Decimal [not null]
  durationMinutes Int [not null]
  categoryId String
  imageUrl String
  isActive Boolean [not null, default: true]
  isFeatured Boolean [not null, default: false]
  category categories
  staffSchedules staff_schedules [not null]
  Appointment appointments [not null]
}

Table appointments {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  deleted Boolean [not null, default: false]
  appointmentCode String [unique, not null]
  room String [not null]
  customerName String [not null]
  customerPhone String [not null]
  appointmentDate DateTime [not null]
  startTime String [not null]
  endTime String [not null]
  staffId String
  staffScheduleId String
  serviceId String
  status String [not null, default: 'PENDING']
  note String
  cancellationReason String
  createdById String
  staff users
  staffSchedule staff_schedules
  service services
  createdBy users
}

Table coupons {
  id String [pk]
  code String [unique, not null]
  description String
  discountType String [not null]
  discountValue Float [not null]
  minOrder Float
  maxDiscount Float
  quantity Int [not null]
  usedCount Int [not null, default: 0]
  startDate DateTime [not null]
  endDate DateTime [not null]
  isActive Boolean [not null, default: true]
  orders orders [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table createdBy {
  rolecreatedId String [ref: > roles.id]
  featurecreatedId String [ref: > features.id]
}

Table updatedBy {
  roleupdatedId String [ref: > roles.id]
  featureupdatedId String [ref: > features.id]
}

Ref: passwords.userId > users.id

Ref: roles.createdById > users.id

Ref: roles.updatedById > users.id

Ref: user_to_role.userId > users.id

Ref: user_to_role.roleId > roles.id

Ref: features.parentId - features.id

Ref: features.createdById > users.id

Ref: features.updatedById > users.id

Ref: permissions.featureId > features.id

Ref: permissions.createdById > users.id

Ref: permissions.updatedById > users.id

Ref: user_to_permission.userId > users.id

Ref: user_to_permission.permissionId > permissions.id

Ref: role_to_permission.roleId > roles.id

Ref: role_to_permission.permissionId > permissions.id

Ref: requests.createdById > users.id

Ref: requests.approvedBy > users.id

Ref: products.categoryId > categories.id

Ref: carts.userId > users.id

Ref: cart_items.cartId > carts.id [delete: Cascade]

Ref: cart_items.productId > products.id

Ref: orders.userId > users.id

Ref: orders.couponId > coupons.id

Ref: order_items.orderId > orders.id [delete: Cascade]

Ref: order_items.productId > products.id

Ref: payments.orderId > orders.id [delete: Cascade]

Ref: qr_codes.orderId > orders.id [delete: Cascade]

Ref: Comment.newsId > News.id [delete: Cascade]

Ref: staff_schedules.staffId > users.id

Ref: staff_schedules.serviceId > services.id

Ref: services.categoryId > categories.id [delete: Set Null]

Ref: appointments.staffId > users.id

Ref: appointments.staffScheduleId > staff_schedules.id

Ref: appointments.serviceId > services.id

Ref: appointments.createdById > users.id